Calculator small update
adding source to calculator and opening constants from the beginning

--- a/Helpertools/calculator.html
+++ b/Helpertools/calculator.html
@@ -479,7 +479,7 @@ body {
 
 </head>
 
-<body>
+<body onload="vidi('konstante');">
 
 <div id="calculator">
 
@@ -680,8 +680,10 @@ body {
 <div class="crta"></div>
 </div>
 
-<p>
+<div align="right">
   <!-- END  calculator -->
-</p>
+  <br/>
+  <font color="#DDDDDD"><i>Thanks to periodni.com!</i></font>
+</div>
 </body>
 </html>
