--- a/Helpertools/mendeleev.html
+++ b/Helpertools/mendeleev.html
@@ -63,9 +63,9 @@ H</div></TD>
 
 <TD COLSPAN="16" ALIGN="LEFT" BGCOLOR="#CCCCCC"><TT>
 &nbsp;&nbsp;&nbsp;
-<img src="../Images/0.Common/Flags/en.png" alt="EN" width="20" height="20" border="0" /><INPUT TYPE="text" NAME="elementEn" SIZE="8" STYLE="text-align: center;">
-<img src="../Images/0.Common/Flags/ro.png" alt="RO" width="20" height="20" border="0" /><INPUT TYPE="text" NAME="elementRo" SIZE="8" STYLE="text-align: center;">
-<img src="../Images/0.Common/Flags/de.png" alt="DE" width="20" height="20" border="0" /><INPUT TYPE="text" NAME="elementDe" SIZE="8" STYLE="text-align: center;">
+<img src="../Images/C0.Common/Flags/en.png" alt="EN" width="20" height="20" border="0" /><INPUT TYPE="text" NAME="elementEn" SIZE="8" STYLE="text-align: center;">
+<img src="../Images/C0.Common/Flags/ro.png" alt="RO" width="20" height="20" border="0" /><INPUT TYPE="text" NAME="elementRo" SIZE="8" STYLE="text-align: center;">
+<img src="../Images/C0.Common/Flags/de.png" alt="DE" width="20" height="20" border="0" /><INPUT TYPE="text" NAME="elementDe" SIZE="8" STYLE="text-align: center;">
 </TT></TD>
 
 	<TD WIDTH=31 HEIGHT=24 ALIGN=CENTER BGCOLOR="#FFFF66"><div style="cursor: default" onMouseOver="fillitin('Helium','Heliu','Helium','2','4.0026','2','1s2','-272C@26ATM','-268.6',
