Local pgnviewer.js

--- a/Chess.html
+++ b/Chess.html
@@ -5,7 +5,7 @@
 	
 	<!-- Support libraries from Yahoo YUI project (for the chess section) -->
 	<script type="text/javascript" src="http://chesstempo.com/js/pgnyui.js"   ></script>   
-	<script type="text/javascript" src="http://chesstempo.com/js/pgnviewer.js"></script> 
+	<script type="text/javascript" src="Javascript/C4.Chess/pgnviewer.js"></script> 
 	<script type="text/javascript" src="Javascript/C4.Chess/Chess.js"></script>
 	<link rel="stylesheet" type="text/css" href="http://chesstempo.com/css/board-min.css"></link>
 	
