--- a/Dictionary.html
+++ b/Dictionary.html
@@ -3,11 +3,11 @@
 	
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-	<script type="text/javascript" src="Javascript/C0.Common/Retranslate.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/RetranslateRO.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/RetranslateEN.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/RetranslateDE.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/Helpertools.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslate.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslateRO.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslateEN.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslateDE.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/helpertools.js"></script>
 	<script type="text/javascript" src="Javascript/C0.Common/highslide/highslide.js"></script>
 	<link rel="stylesheet" type="text/css" href="Javascript/C0.Common/highslide/highslide.css" />
 	<script type="text/javascript" src="Javascript/C5.Dictionary/J1.Global_variables.js"></script>
