--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -10,11 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="http://chesstempo.com/css/board-min.css"></link>
 	
 	<!-- Custom support libraries --> 
-	<script type="text/javascript" src="Javascript/C0.Common/Retranslate.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/RetranslateRO.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/RetranslateEN.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/RetranslateDE.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/Helpertools.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslate.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslateRO.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslateEN.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/retranslateDE.js"></script>
+	<script type="text/javascript" src="Javascript/C0.Common/helpertools.js"></script>
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
 	<link rel="shortcut icon" href="Images\favicon.ico">
 	<title>Chichitza</title>
