--- a/Chess.html
+++ b/Chess.html
@@ -37,7 +37,7 @@
 +--------------------900-----------------------+--->
 
 
-<body onload="detectLanguage()"> <!---onload should be a function of identifying the language and call the retranslate-->
+<body onload="detectLanguage();"> <!---onload should be a function of identifying the language and call the retranslate-->
 
 <table border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
 <!---------------------------------------------------->
@@ -113,5 +113,22 @@
 					</tr>
 </table>
 
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+	
+    var disqus_shortname = 'chichitza'; // Required - Replace example with your forum shortname
+    var disqus_title = 'Chess Study';//'a unique title for each page where Disqus is present';
+    var disqus_url = window.location.href;
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">Comments powered by <span class="logo-disqus">Disqus</span></a>
 </body>
 </html>
