--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -3,12 +3,6 @@
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	
-	<!-- Support libraries from Yahoo YUI project (for the chess section) -->
-	<script type="text/javascript" src="http://chesstempo.com/js/pgnyui.js"   ></script>   
-	<script type="text/javascript" src="Javascript/C4.Chess/pgnviewer.js"></script> 
-	<script type="text/javascript" src="Javascript/C4.Chess/Chess.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://chesstempo.com/css/board-min.css"></link>
-	
 	<!-- Custom support libraries --> 
 	<script type="text/javascript" src="Javascript/C0.Common/retranslate.js"></script>
 	<script type="text/javascript" src="Javascript/C0.Common/retranslateRO.js"></script>
@@ -37,7 +31,7 @@
 +--------------------900-----------------------+--->
 
 
-<body onload="detectLanguage()"> <!---onload should be a function of identifying the language and call the retranslate-->
+<body onload="detectLanguage();"> <!---onload should be a function of identifying the language and call the retranslate-->
 
 <table border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
 <!---------------------------------------------------->
