--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 +--------------------900-----------------------+--->
 
 
-<body onload="detectLanguage()"> <!---onload should be a function of identifying the language and call the retranslate-->
+<body onload="detectLanguage();"> <!---onload should be a function of identifying the language and call the retranslate-->
 
 <table border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
 <!---------------------------------------------------->
