--- a/Dictionary.html
+++ b/Dictionary.html
@@ -78,7 +78,7 @@
 							</div>
 							<br/>
 							<div class="common" align="right" style="padding-right: 20px; float:bottom">
-							<a id="buttonAdmin"	><img id="imgAdmin"   src="Images/C0.Common/Helpertools/Admin.png"   width="32" height="32" border="0" /></a>
+							<a id="buttonAdmin"	hidden><img id="imgAdmin"   src="Images/C0.Common/Helpertools/Admin.png"   width="32" height="32" border="0" /></a>
 							<a id="buttonContact"><img id="imgContact" src="Images/C0.Common/Helpertools/Contact.png" width="32" height="32" border="0" /></a>
 							<a id="buttonHome" 	><img id="imgHome"    src="Images/C0.Common/Helpertools/Home.png"    width="32" height="32" border="0" /></a>
 							</div>
@@ -144,7 +144,7 @@
 	
     var disqus_shortname = 'chichitza'; // Required - Replace example with your forum shortname
     var disqus_title = 'Dictionary';//'a unique title for each page where Disqus is present';
-    var disqus_url = 'www.chichitza.ro/Dictionary.html';
+    var disqus_url = 'http://www.chichitza.ro/Dictionary.html';
     
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
