--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</div>
 							<br/>
 							<div class="common" align="right" style="padding-right: 20px; float:bottom">
-							<a id="buttonAdmin"	><img id="imgAdmin"   src="Images/C0.Common/Helpertools/Admin.png"   width="32" height="32" border="0" /></a>
+							<a id="buttonAdmin"	hidden><img id="imgAdmin"   src="Images/C0.Common/Helpertools/Admin.png"   width="32" height="32" border="0" /></a>
 							<a id="buttonContact"><img id="imgContact" src="Images/C0.Common/Helpertools/Contact.png" width="32" height="32" border="0" /></a>
 							<a id="buttonHome" 	><img id="imgHome"    src="Images/C0.Common/Helpertools/Home.png"    width="32" height="32" border="0" /></a>
 							</div>
