--- a/Dictionary.html
+++ b/Dictionary.html
@@ -8,8 +8,11 @@
 	<script type="text/javascript" src="Javascript/C0.Common/retranslateEN.js"></script>
 	<script type="text/javascript" src="Javascript/C0.Common/retranslateDE.js"></script>
 	<script type="text/javascript" src="Javascript/C0.Common/helpertools.js"></script>
-	<script type="text/javascript" src="Javascript/C0.Common/highslide/highslide.js"></script>
-	<link rel="stylesheet" type="text/css" href="Javascript/C0.Common/highslide/highslide.css" />
+    
+    <!-- Tinybox for displaying popups -->
+    <script type="text/javascript" src="Javascript/C0.Common/tinybox.js"></script>
+    <link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
+    
 	<script type="text/javascript" src="Javascript/C5.Dictionary/J1.Global_variables.js"></script>
 	<script type="text/javascript" src="Javascript/C5.Dictionary/J2.DatabaseRO.js"      ></script>
 	<script type="text/javascript" src="Javascript/C5.Dictionary/J2.DatabaseEN.js"      ></script>
