--- a/Helpertools/contactDE.html
+++ b/Helpertools/contactDE.html
@@ -8,12 +8,19 @@
 </head>
 
 <body>
-				<form name='form1' method='post' action='contact.php'> 
+				<a id="buttonX" 	 href="JavaScript:TINY.box.hide();">  
+                    <img src="Images/C0.Common/Helpertools/BigXGray.png" alt="X" width="24" height="24" border="0" align="right" />
+                </a>
+    
+                <br/>
+                <br/>
+    
+                <form name='form1' method='post' action='contact.php'> 
 				   <p> Schicken Sie uns eine Email-Nachricht:</p> 
 				   <p><label for='name'>Email</label> 
 				   <input name='email' type='text'/></p> 
-				   <p><label for='e-mail' >Nachricht</label> 
-				   <textarea name='mesaj' cols='30' rows='4'></textarea></p> 
+				   <p><label for='e-mail' >Nachricht</label></p>
+				   <p><textarea name='mesaj' cols='30' rows='4'></textarea></p> 
 				   <p> <input type='submit' name='trimite' id='submitBtn' value='Senden' style='cursor:pointer'/></p> 
 				</form>
 </body>
