--- a/Helpertools/contactRO.html
+++ b/Helpertools/contactRO.html
@@ -8,13 +8,21 @@
 </head>
 
 <body>
-				<form name='form1' method='post' action='contact.php'> 
-				   <p> Trimite-ne un mesaj prin e-mail:</p> 
-				   <p><label for='name'>E-mail</label> 
-				   <input name='email' type='text'/></p> 
-				   <p><label for='e-mail' >Mesaj</label> 
-				   <textarea name='mesaj' cols='30' rows='4'></textarea></p> 
-				   <p> <input type='submit' name='trimite' id='submitBtn' value='Trimite' style='cursor:pointer'/></p> 
-				</form>
+				<a id="buttonX" 	 href="JavaScript:TINY.box.hide();">  
+                    <img src="Images/C0.Common/Helpertools/BigXGray.png" alt="X" width="24" height="24" border="0" align="right" />
+                </a>
+    
+                <br/>
+                <br/>
+    
+                <form name='form1' method='post' action='contact.php'> 
+                   <p> Trimite-ne un mesaj prin e-mail:</p> 
+                   <p><label for='name'>E-mail</label> 
+                   <input name='email' type='text'/></p> 
+                   <p><label for='e-mail' >Mesaj</label></p> 
+                   <p><textarea name='mesaj' cols='30' rows='4'></textarea></p> 
+                   <p> <input type='submit' name='trimite' id='submitBtn' value='Trimite' style='cursor:pointer'/></p> 
+                </form>
+
 </body>
 </html>
