--- a/Interactive.html
+++ b/Interactive.html
@@ -9,6 +9,11 @@
 	<script type="text/javascript" src="Javascript/C0.Common/retranslateDE.js"></script>
 	<script type="text/javascript" src="Javascript/C0.Common/helpertools.js"></script>
 	<script type="text/javascript" src="Javascript/C3.Interactive/Interactive.js"></script>
+    
+    <!-- Tinybox for displaying popups -->
+    <script type="text/javascript" src="Javascript/C0.Common/tinybox.js"></script>
+    <link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
+    
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
 	<link rel="shortcut icon" href="Images\favicon.ico">
 	<title>Chichitza</title>
