--- a/Helpertools/mendeleev.html
+++ b/Helpertools/mendeleev.html
@@ -1,6 +1,10 @@
 <HTML>
 <HEAD>
 
+    <!-- Tinybox for displaying popups -->
+    <script type="text/javascript" src="Javascript/C0.Common/tinybox.js"></script>
+    <link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
+
 <TITLE>Periodic Table of the Elements (JavaScript)</TITLE>
 
 <META name="description" content="An info-packed interactive javascripted Periodic 
@@ -28,6 +32,13 @@ Box.boil.value = boil + " °C";
 <BASEFONT SIZE="4">
 
 <BODY BGCOLOR="#FFFFFF" LINK="#003366" VLINK="#003366" ALINK="#003366" TEXT="#000000"><script type='text/javascript' language='javascript' src='mendeleev.js?0=0&amp;0=0&amp;0=0'></script>
+
+<a id="buttonX" 	 href="JavaScript:TINY.box.hide();">  
+    <img src="Images/C0.Common/Helpertools/BigXGray.png" alt="X" width="24" height="24" border="0" align="right" />
+</a>
+<br/>
+<br/>
+<br/>
 
 <DIV ALIGN=CENTER>
 <FORM NAME="pertab">
