--- a/Helpertools/terra.html
+++ b/Helpertools/terra.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <script src="http://www.webglearth.com/v2/api.js"></script>
+
+<!-- Tinybox for displaying popups -->
+<script type="text/javascript" src="Javascript/C0.Common/tinybox.js"></script>
+<link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
+    
 <script>
 var map;
   function initialize() {
@@ -35,6 +40,11 @@ var map;
 </script>
 </head>
 <body onload="initialize()">
+    
+    <a id="buttonX" 	 href="JavaScript:TINY.box.hide();">  
+        <img src="Images/C0.Common/Helpertools/BigXGray.png" alt="X" width="24" height="24" border="0" align="right" />
+    </a>
+
   <h1>WebGL Earth</h1>
   <div id="earth_div" style="width:600px;height:400px;border:1px solid gray; padding:2px;"></div>
   <div> 					
