--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<script type="text/javascript" src="Javascript/C4.Chess/pgnviewer.js"></script> 
 	<script type="text/javascript" src="Javascript/C4.Chess/Chess.js"></script>
 	<link rel="stylesheet" type="text/css" href="http://chesstempo.com/css/board-min.css"></link>
+    
+    <!-- Tinybox for displaying popups -->
+    <script type="text/javascript" src="Javascript/C0.Common/tinybox.js"></script>
+    <link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
 	
 	<!-- Custom support libraries --> 
 	<script type="text/javascript" src="Javascript/C0.Common/retranslate.js"></script>
