--- a/Helpertools/contactEN.html
+++ b/Helpertools/contactEN.html
@@ -17,10 +17,10 @@
     
                 <form name='form1' method='post' action='contact.php'> 
 				   <p> Send us your an e-mail message:</p> 
-				   <p><label for='name'>E-mail</label> 
-				   <input name='email' type='text'/></p> 
-				   <p><label for='e-mail' >Message</label></p> 
-				   <p><textarea name='mesaj' cols='30' rows='4'></textarea></p> 
+				   <p><label for='name'>E-mail:</label></p> 
+				   <p><input name='email' type='text' size="35"/></p> 
+				   <p><label for='e-mail' >Message:</label></p> 
+				   <p><textarea name='mesaj' cols='40' rows='5'></textarea></p> 
 				   <p> <input type='submit' name='trimite' id='submitBtn' value='Send' style='cursor:pointer'/></p> 
 				</form>
 </body>
