--- a/Helpertools/contactDE.html
+++ b/Helpertools/contactDE.html
@@ -17,10 +17,10 @@
     
                 <form name='form1' method='post' action='contact.php'> 
 				   <p> Schicken Sie uns eine Email-Nachricht:</p> 
-				   <p><label for='name'>Email</label> 
-				   <input name='email' type='text'/></p> 
-				   <p><label for='e-mail' >Nachricht</label></p>
-				   <p><textarea name='mesaj' cols='30' rows='4'></textarea></p> 
+				   <p><label for='name'>Email:</label></p> 
+				   <p><input name='email' type='text' size="35"/></p> 
+				   <p><label for='e-mail' >Nachricht:</label></p>
+				   <p><textarea name='mesaj' cols='40' rows='5'></textarea></p> 
 				   <p> <input type='submit' name='trimite' id='submitBtn' value='Senden' style='cursor:pointer'/></p> 
 				</form>
 </body>
