Reverting popup generation for cribsheets

--- a/Microchitze.html
+++ b/Microchitze.html
@@ -140,10 +140,10 @@
 											<a href="javascript:void(0);" id="expandcompressHelpertools" style="display:inline-block; width:100px;" onclick="expandcompressHelpertools();"></a>
 										</div>
 										<div id="helpertoolsField" style="visibility: visible">
-											<p align="center">	
-												<a id="buttonCalculator" href="JavaScript:TINY.box.show('Helpertools/calculator.html',1,0,0,1);"> <img src="Images/C0.Common/Helpertools/Calculator.png"  alt="Calculator" width="24" height="24" border="0" /></a> &nbsp;
-												<a id="buttonTerra" 	 href="JavaScript:TINY.box.show('Helpertools/terra.html',     1,0,0,1);">  <img src="Images/C0.Common/Helpertools/Terra.png"      alt="Terra" width="24" height="24" border="0" /></a> &nbsp;
-												<a id="buttonMendeleev"  href="JavaScript:TINY.box.show('Helpertools/mendeleev.html', 1,0,0,1);">  <img src="Images/C0.Common/Helpertools/Mendeleev.png"  alt="Mendeleev" width="24" height="24" border="0" /></a> 
+											<p align="center">
+                                                <a id="buttonCalculator" href="JavaScript:newPopup(440,570,10,10,'Helpertools/calculator.html');"> <img src="Images/C0.Common/Helpertools/Calculator.png"  alt="Calculator" width="24" height="24" border="0" /></a> &nbsp;
+												<a id="buttonTerra" 	 href="JavaScript:newPopup(550,640,10,10,'Helpertools/terra.html');">      <img src="Images/C0.Common/Helpertools/Terra.png"        alt="Terra" width="24" height="24" border="0" /></a> &nbsp;
+												<a id="buttonMendeleev"  href="JavaScript:newPopup(420,650,10,10,'Helpertools/mendeleev.html');">  <img src="Images/C0.Common/Helpertools/Mendeleev.png"        alt="Mendeleev" width="24" height="24" border="0" /></a> 
 											</p>
 										</div>
 									</td>
