Changed colour to calculator thanks

--- a/Helpertools/calculator.html
+++ b/Helpertools/calculator.html
@@ -684,7 +684,7 @@ body {
 <div align="right">
   <!-- END  calculator -->
   <br/>
-  <font color="#DDDDDD"><i>Thanks to periodni.com!</i></font>
+  <font color="#808080"><i>Thanks to periodni.com!</i></font>
 </div>
 </body>
 </html>
