Contact text updates

--- a/Helpertools/contactDE.html
+++ b/Helpertools/contactDE.html
@@ -16,12 +16,13 @@
                 <br/>
     
                 <form name='form1' method='post' action='contact.php'> 
-				   <p> Schicken Sie uns eine Email-Nachricht:</p> 
-				   <p><label for='name'>Email:</label></p> 
+				   <p> Hinterlasse uns eine Nachricht...</p> 
+				   <p><label for='name'>Email</label></p> 
 				   <p><input name='email' type='text' size="35"/></p> 
-				   <p><label for='e-mail' >Nachricht:</label></p>
-				   <p><textarea name='mesaj' cols='40' rows='5'></textarea></p> 
-				   <p> <input type='submit' name='trimite' id='submitBtn' value='Senden' style='cursor:pointer'/></p> 
+				   <p><label for='e-mail' >Nachricht</label></p>
+				   <p><textarea name='mesaj' cols='40' rows='10' style='resize:none'></textarea></p> 
+				   <p> <input type='submit' name='trimite' id='submitBtn' value='Senden' style='cursor:pointer'/>
+                       <span style='float:right'><i>Danke f&#252;r das Feedback!</i></span></p>
 				</form>
 </body>
 </html>
