--- a/Helpertools/contactEN.html
+++ b/Helpertools/contactEN.html
@@ -16,12 +16,13 @@
                 <br/>
     
                 <form name='form1' method='post' action='contact.php'> 
-				   <p> Send us your an e-mail message:</p> 
-				   <p><label for='name'>E-mail:</label></p> 
+				   <p> Leave us a message...</p> 
+				   <p><label for='name'>E-mail</label></p> 
 				   <p><input name='email' type='text' size="35"/></p> 
-				   <p><label for='e-mail' >Message:</label></p> 
-				   <p><textarea name='mesaj' cols='40' rows='5'></textarea></p> 
-				   <p> <input type='submit' name='trimite' id='submitBtn' value='Send' style='cursor:pointer'/></p> 
+				   <p><label for='e-mail' >Message</label></p> 
+				   <p><textarea name='mesaj' cols='40' rows='10' style='resize:none'></textarea></p> 
+				   <p> <input type='submit' name='trimite' id='submitBtn' value='Send' style='cursor:pointer'/>
+                       <span style='float:right'><i>Thanks for the feedback!</i></span></p> 
 				</form>
 </body>
 </html>
