--- a/Helpertools/contactRO.html
+++ b/Helpertools/contactRO.html
@@ -16,12 +16,13 @@
                 <br/>
     
                 <form name='form1' method='post' action='contact.php'> 
-                   <p> Trimite-ne un mesaj prin e-mail:</p> 
-                   <p><label for='name'>E-mail:</label></p>
+                   <p> Las&#x103;-ne un mesaj...</p> 
+                   <p><label for='name'>E-mail</label></p>
                    <p><input name='email' type='text' size="35"/></p> 
                    <p><label for='e-mail' >Mesaj</label></p> 
-                   <p><textarea name='mesaj' cols='40' rows='5'></textarea></p> 
-                   <p> <input type='submit' name='trimite' id='submitBtn' value='Trimite' style='cursor:pointer'/></p> 
+                   <p><textarea name='mesaj' cols='40' rows='10' style='resize:none'></textarea></p> 
+                   <p> <input type='submit' name='trimite' id='submitBtn' value='Trimite' style='cursor:pointer'/>
+                        <span style='float:right'><i>Mul&#x163;umim pentru feedback!</i></span></p> 
                 </form>
 
 </body>
