--- a/Macrochitze.html
+++ b/Macrochitze.html
@@ -104,7 +104,7 @@
                                         <div id="RoomPicture"     align="center"></div>
                                         <br/><br/>
                                         <div align="center">                
-                                            <a id="bonusPuzzle" href="javascript:void(0);"><img id="imgBonus" src="Images/C2.Macrochitze/bonus.png" width="100" height="50" border="0" Hspace="0" Vspace="0"/></a>
+                                            <a id="solutionField" href="javascript:showSolutionField();"><img id="imgBonus" src="Images/C2.Macrochitze/bonus.png" width="100" height="50" border="0" Hspace="0" Vspace="0"/></a>
                                         </div>
                                         <br/><br/>
                                         <div align="center">
