--- a/Macrochitze.html
+++ b/Macrochitze.html
@@ -100,8 +100,11 @@
 <!-- Cell (3) -->		<td rowspan="1" colspan="3" width="900">
                             <table id="outertableMainContents" border="0">
                                 <tr>
-                                    <td id="tdMainContentsLeft" rowspan="1" colspan="1" width="175" height="250" class="common">
-                                        <div id="RoomPicture"     align="center"></div>
+                                    <td id="tdMainContentsLeft" rowspan="1" colspan="1" width="75" height="250" class="common">
+                                        <div align="center">                
+                                            <a id="solutionField" href="javascript:showSolutionField();"><img src="Images/C2.Macrochitze/solutionIcon.png" width="70" height="100" border="0" Hspace="0" Vspace="0"/></a>
+                                        </div>
+                                        <div id="MazeRules"     align="center"></div>
                                     </td>
                                     <td id="tdDoorLeft" rowspan="1" colspan="1" width="75" height="400">
                                         <div id="DoorLeft" class="common" align="center">
@@ -136,13 +139,7 @@
                                              <a id="buttonDoorRight"  href="javascript:void(0);"><img id="imgDoorRight" width="75" height="400" border="0" Hspace="0" Vspace="0"/></a>
                                         </div>
                                     </td>
-                                    <td id="tdMainContentsRight" rowspan="1" colspan="1" width="175" height="250"> 
-                                        <div align="center">                
-                                            <a id="solutionField" href="javascript:showSolutionField();"><img id="imgBonus" src="Images/C2.Macrochitze/bonus.png" width="100" height="50" border="0" Hspace="0" Vspace="0"/></a>
-                                        </div>
-                                        <br/><br/>
-                                        <div id="MacroStageInstructions"> Instructions </div>
-                                        <br/><br/>
+                                    <td id="tdMainContentsRight" rowspan="1" colspan="1" width="275" height="250" valign="top"> 
                                         <div align="center">
 											<a href="javascript:void(0);" id="expandcompressHelpertools" style="display:inline-block; width:100px;" onclick="expandcompressHelpertools();"></a>
 										</div>
@@ -153,6 +150,8 @@
                                                 <a id="buttonMendeleev"  href="JavaScript:newPopup(420,650,10,10,'Helpertools/mendeleev.html');">  <img src="Images/C0.Common/Helpertools/Mendeleev.png"        alt="Mendeleev" width="24" height="24" border="0" /></a> 
                                             </p>
                                         </div>
+                                        <br/><br/>
+                                        <div id="MacroStageInstructions" align="center"> Instructions </div>
                                     </td>
                                 </tr>
                             </table>
